--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8",
-        "twilio/sdk": "^7.13"
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
